@@ -66,6 +66,7 @@ public class SpiraImportExport
 	private String userName;
 	private String apiKey;
 	private Integer storedProjectId = null;
+	private Integer storedProjectTemplateId = null;
 	private String productName = "";
 	private Integer authenticatedUserId = null;
 	private int patchNumber = 0;
@@ -125,7 +126,17 @@ public class SpiraImportExport
 
 	public void setStoredProjectId(int projectId)
 	{
-		this.storedProjectId = new Integer(projectId);
+		this.storedProjectId = Integer.valueOf(projectId);
+	}
+	
+	public Integer getStoredProjectTemplateId()
+	{
+		return this.storedProjectTemplateId;
+	}
+
+	public void setStoredProjectTemplateId(int projectTemplateId)
+	{
+		this.storedProjectTemplateId = Integer.valueOf(projectTemplateId);
 	}
 
 	public String getProductName()
@@ -607,26 +618,8 @@ public class SpiraImportExport
 				throw new SpiraInvalidArtifactKeyException(NLS.bind(Messages.SpiraImportExport_InvalidArtifactKey, artifactKey));
 			}
 
-			// Next we need to re-authenticate
-			boolean success = soap.connectionAuthenticate2(this.userName, this.password, SPIRA_PLUG_IN_NAME);
-			if (!success)
-			{
-				// throw new SpiraException (this.userName + "/" +
-				// this.password);
-				throw new SpiraAuthenticationException(Messages.SpiraImportExport_UnableToAuthenticate);
-			}
-
-			// Next we need to connect to the appropriate project
-			success = soap.connectionConnectToProject(projectId);
-			if (!success)
-			{
-				// throw new SpiraException (this.userName + "/" +
-				// this.password);
-				throw new SpiraAuthorizationException(NLS.bind(Messages.SpiraImportExport_UnableToConnectToProject, projectId));
-			}
-
 			// Call the appropriate method
-			String url = this.fullUrl + "projects/{project_id}/requirements/{requirement_id}";
+			String url = this.fullUrl + "/projects/{project_id}/requirements/{requirement_id}";
 			url = url.replace("{product_id}", String.valueOf(projectId));
 			url = url.replace("{requirement_id}", String.valueOf(requirementId));
 			String json = httpGet(url, this.userName, this.apiKey);
@@ -639,7 +632,7 @@ public class SpiraImportExport
 			Requirement requirement = new Requirement(remoteRequirement);
 
 			// Now get any associated comments
-			url = this.fullUrl + "projects/{project_id}/requirements/{requirement_id}";
+			url = this.fullUrl + "/projects/{project_id}/requirements/{requirement_id}/comments";
 			url = url.replace("{product_id}", String.valueOf(projectId));
 			url = url.replace("{requirement_id}", String.valueOf(requirementId));
 			json = httpGet(url, this.userName, this.apiKey);
@@ -657,7 +650,7 @@ public class SpiraImportExport
 			}
 
 			// Now get any associated attachments
-			url = this.fullUrl + "projects/{project_id}/artifact-types/{artifact_type_id}/artifacts/{artifact_id}/documents";
+			url = this.fullUrl + "/projects/{project_id}/artifact-types/{artifact_type_id}/artifacts/{artifact_id}/documents";
 			url = url.replace("{product_id}", String.valueOf(projectId));
 			url = url.replace("{artifact_type_id}", String.valueOf(ArtifactType.REQUIREMENT.getArtifactTypeId()));
 			url = url.replace("{artifact_id}", String.valueOf(requirementId));
@@ -693,17 +686,15 @@ public class SpiraImportExport
 	{
 		try
 		{
-			// First we need to re-authenticate
-			boolean success = soap.connectionAuthenticate2(this.userName, this.password, SPIRA_PLUG_IN_NAME);
-			if (!success)
-			{
-				// throw new SpiraException (this.userName + "/" +
-				// this.password);
-				throw new SpiraAuthenticationException(Messages.SpiraImportExport_UnableToAuthenticate);
-			}
-
 			// Call the appropriate method
-			List<RemoteRequirement> remoteRequirements = soap.requirementRetrieveForOwner().getRemoteRequirement();
+			String url = this.fullUrl + "/requirements";
+			String json = httpGet(url, this.userName, this.apiKey);
+			
+			//Parse the returned data
+			Gson gson = new Gson();
+			ArrayList<RemoteRequirement> remoteRequirements;
+			java.lang.reflect.Type remoteRequirementsArrayList = new TypeToken<ArrayList<RemoteRequirement>>(){}.getType();
+			remoteRequirements = gson.fromJson(json, remoteRequirementsArrayList);
 
 			// Convert the SOAP requirements into the local versions
 			List<Requirement> requirements = new ArrayList<Requirement>();
@@ -770,32 +761,29 @@ public class SpiraImportExport
 				throw new SpiraInvalidArtifactKeyException(NLS.bind(Messages.SpiraImportExport_InvalidArtifactKey, artifactKey));
 			}
 
-			// Next we need to re-authenticate
-			boolean success = soap.connectionAuthenticate2(this.userName, this.password, SPIRA_PLUG_IN_NAME);
-			if (!success)
-			{
-				// throw new SpiraException (this.userName + "/" +
-				// this.password);
-				throw new SpiraAuthenticationException(Messages.SpiraImportExport_UnableToAuthenticate);
-			}
-
-			// Next we need to connect to the appropriate project
-			success = soap.connectionConnectToProject(projectId);
-			if (!success)
-			{
-				// throw new SpiraException (this.userName + "/" +
-				// this.password);
-				throw new SpiraAuthorizationException(NLS.bind(Messages.SpiraImportExport_UnableToConnectToProject, projectId));
-			}
-
 			// Call the appropriate method
-			RemoteIncident remoteIncident = soap.incidentRetrieveById(incidentId);
+			String url = this.fullUrl + "/projects/{project_id}/incidents/{incident_id}";
+			url = url.replace("{product_id}", String.valueOf(projectId));
+			url = url.replace("{incident_id}", String.valueOf(incidentId));
+			String json = httpGet(url, this.userName, this.apiKey);
 
-			// Convert the SOAP incident into the local version
+			//Parse the returned data
+			Gson gson = new Gson();
+			RemoteIncident remoteIncident = gson.fromJson(json, RemoteIncident.class);
+			
+			// Convert the remote incident into the local version
 			Incident incident = new Incident(remoteIncident);
 
 			// Now get the comments
-			List<RemoteComment> remoteComments = soap.incidentRetrieveComments(incidentId).getRemoteComment();
+			url = this.fullUrl + "/projects/{project_id}/incidents/{incident_id}/comments";
+			url = url.replace("{product_id}", String.valueOf(projectId));
+			url = url.replace("{incident_id}", String.valueOf(incidentId));
+			json = httpGet(url, this.userName, this.apiKey);
+
+			//Parse the returned data
+			ArrayList<RemoteComment> remoteComments;
+			java.lang.reflect.Type remoteCommentArrayList = new TypeToken<ArrayList<RemoteComment>>(){}.getType();
+			remoteComments = gson.fromJson(json, remoteCommentArrayList);
 
 			// Convert the SOAP comments into the local version
 			for (RemoteComment remoteComment : remoteComments)
@@ -805,13 +793,18 @@ public class SpiraImportExport
 			}
 
 			// Now get any associated attachments
-			RemoteSort remoteSort = new RemoteSort();
-			remoteSort.setPropertyName(CreateJAXBString("PropertyName", "UploadDate"));
-			remoteSort.setSortAscending(false);
-			List<RemoteDocument> remoteDocuments = soap.documentRetrieveForArtifact(ArtifactType.INCIDENT.getArtifactTypeId(), incidentId, null, remoteSort)
-					.getRemoteDocument();
+			url = this.fullUrl + "/projects/{project_id}/artifact-types/{artifact_type_id}/artifacts/{artifact_id}/documents";
+			url = url.replace("{product_id}", String.valueOf(projectId));
+			url = url.replace("{artifact_type_id}", String.valueOf(ArtifactType.INCIDENT.getArtifactTypeId()));
+			url = url.replace("{artifact_id}", String.valueOf(incidentId));
+			json = httpGet(url, this.userName, this.apiKey);
 
-			// Convert the SOAP attachments into the local version
+			//Parse the returned data
+			ArrayList<RemoteDocument> remoteDocuments;
+			java.lang.reflect.Type remoteDocumentArrayList = new TypeToken<ArrayList<RemoteDocument>>(){}.getType();
+			remoteDocuments = gson.fromJson(json, remoteDocumentArrayList);
+
+			// Convert the remote attachments into the local version
 			for (RemoteDocument remoteDocument : remoteDocuments)
 			{
 				ArtifactAttachment artifactAttachment = new ArtifactAttachment(remoteDocument);
@@ -820,29 +813,9 @@ public class SpiraImportExport
 
 			return incident;
 		}
-		catch (WebServiceException ex)
+		catch (IOException ex)
 		{
 			throw new SpiraException(ex.getMessage());
-		}
-		catch (IImportExportConnectionConnectToProjectServiceFaultMessageFaultFaultMessage exception)
-		{
-			throw new SpiraException(exception.getMessage());
-		}
-		catch (IImportExportIncidentRetrieveByIdServiceFaultMessageFaultFaultMessage exception)
-		{
-			throw new SpiraException(exception.getMessage());
-		}
-		catch (IImportExportConnectionAuthenticate2ServiceFaultMessageFaultFaultMessage exception)
-		{
-			throw new SpiraException(exception.getMessage());
-		}
-		catch (IImportExportDocumentRetrieveForArtifactServiceFaultMessageFaultFaultMessage exception)
-		{
-			throw new SpiraException(exception.getMessage());
-		}
-		catch (IImportExportIncidentRetrieveCommentsServiceFaultMessageFaultFaultMessage exception)
-		{
-			throw new SpiraException(exception.getMessage());
 		}
 	}
 
@@ -893,36 +866,25 @@ public class SpiraImportExport
 	{
 		try
 		{
-			// Get the list of users from the SOAP API
-			// First we need to re-authenticate
-			boolean success = soap.connectionAuthenticate2(this.userName, this.password, SPIRA_PLUG_IN_NAME);
-			if (!success)
-			{
-				// throw new SpiraException (this.userName + "/" +
-				// this.password);
-				throw new SpiraAuthenticationException(Messages.SpiraImportExport_UnableToAuthenticate);
-			}
-
-			// Next we need to connect to the appropriate project
-			success = soap.connectionConnectToProject(projectId);
-			if (!success)
-			{
-				// throw new SpiraException (this.userName + "/" +
-				// this.password);
-				throw new SpiraAuthorizationException(NLS.bind(Messages.SpiraImportExport_UnableToConnectToProject, projectId));
-			}
-
-			// Get the list of users
-			List<RemoteProjectUser> remoteProjectUsers = soap.projectRetrieveUserMembership().getRemoteProjectUser();
-
-			// Convert the SOAP project user into the ArtifactField class
+			// Get the list of users from the API
+			String url = this.fullUrl + "/projects/{project_id}/users";
+			url = url.replace("{product_id}", String.valueOf(projectId));
+			String json = httpGet(url, this.userName, this.apiKey);
+			
+			//Parse the returned data
+			Gson gson = new Gson();
+			ArrayList<RemoteProjectUser> remoteProjectUsers;
+			java.lang.reflect.Type remoteProjectUsersType = new TypeToken<ArrayList<RemoteProjectUser>>(){}.getType();
+			remoteProjectUsers = gson.fromJson(json, remoteProjectUsersType);
+			
+			// Convert the remote project user into the ArtifactField class
 			ArtifactField artifactField = new ArtifactField("User");
 			ArrayList<ArtifactFieldValue> lookupValues = new ArrayList<ArtifactFieldValue>();
 			for (RemoteProjectUser remoteProjectUser : remoteProjectUsers)
 			{
-				int userId = remoteProjectUser.getUserId().getValue();
-				lookupValues.add(new ArtifactFieldValue(userId, remoteProjectUser.getFirstName().getValue() + " " + remoteProjectUser.getLastName().getValue()
-						+ " [" + remoteProjectUser.getEmailAddress().getValue() + "]"));
+				int userId = remoteProjectUser.UserId.intValue();
+				lookupValues.add(new ArtifactFieldValue(userId, remoteProjectUser.FirstName + " " + remoteProjectUser.LastName
+						+ " [" + remoteProjectUser.EmailAddress + "]"));
 			}
 			artifactField.setValues(lookupValues.toArray(new ArtifactFieldValue[0]));
 			return artifactField;
@@ -931,19 +893,7 @@ public class SpiraImportExport
 		{
 			return null;
 		}
-		catch (WebServiceException ex)
-		{
-			return null;
-		}
-		catch (IImportExportConnectionConnectToProjectServiceFaultMessageFaultFaultMessage exception)
-		{
-			return null;
-		}
-		catch (IImportExportProjectRetrieveUserMembershipServiceFaultMessageFaultFaultMessage exception)
-		{
-			return null;
-		}
-		catch (IImportExportConnectionAuthenticate2ServiceFaultMessageFaultFaultMessage exception)
+		catch (IOException ex)
 		{
 			return null;
 		}
@@ -953,45 +903,34 @@ public class SpiraImportExport
 	{
 		try
 		{
-			// Get the list of releases from the SOAP API
-			// First we need to re-authenticate
-			boolean success = soap.connectionAuthenticate2(this.userName, this.password, SPIRA_PLUG_IN_NAME);
-			if (!success)
-			{
-				// throw new SpiraException (this.userName + "/" +
-				// this.password);
-				throw new SpiraAuthenticationException(Messages.SpiraImportExport_UnableToAuthenticate);
-			}
-
-			// Next we need to connect to the appropriate project
-			success = soap.connectionConnectToProject(projectId);
-			if (!success)
-			{
-				// throw new SpiraException (this.userName + "/" +
-				// this.password);
-				throw new SpiraAuthorizationException(NLS.bind(Messages.SpiraImportExport_UnableToConnectToProject, projectId));
-			}
-
 			// Get the list of releases
-			List<RemoteRelease> remoteReleases = soap.releaseRetrieve(activeOnly).getRemoteRelease();
-
+			String url = this.fullUrl + "/projects/{project_id}/releases";
+			url = url.replace("{product_id}", String.valueOf(projectId));
+			String json = httpGet(url, this.userName, this.apiKey);
+			
+			//Parse the returned data
+			Gson gson = new Gson();
+			ArrayList<RemoteRelease> remoteReleases;
+			java.lang.reflect.Type remoteReleasesType = new TypeToken<ArrayList<RemoteRelease>>(){}.getType();
+			remoteReleases = gson.fromJson(json, remoteReleasesType);
+			
 			// Convert the SOAP release into the ArtifactField class
 			ArtifactField artifactField = new ArtifactField("Release");
 			ArrayList<ArtifactFieldValue> lookupValues = new ArrayList<ArtifactFieldValue>();
 			for (RemoteRelease remoteRelease : remoteReleases)
 			{
 				// Indent with spaces. Also need to make releases look slightly
-				// different
-				String indentDisplay = remoteRelease.getIndentLevel().getValue().replaceAll("[A-Z]", " ");
-				if (remoteRelease.isIteration())
+				// different to sprint/phase
+				String indentDisplay = remoteRelease.IndentLevel.replaceAll("[A-Z]", " ");
+				if (remoteRelease.ReleaseTypeId == 1 || remoteRelease.ReleaseTypeId == 2)
 				{
-					lookupValues.add(new ArtifactFieldValue(remoteRelease.getReleaseId().getValue(), indentDisplay
-							+ remoteRelease.getVersionNumber().getValue() + " - " + remoteRelease.getName().getValue() + "*"));
+					lookupValues.add(new ArtifactFieldValue(remoteRelease.ReleaseId, indentDisplay
+							+ remoteRelease.VersionNumber + " - " + remoteRelease.Name + "*"));
 				}
 				else
 				{
-					lookupValues.add(new ArtifactFieldValue(remoteRelease.getReleaseId().getValue(), indentDisplay
-							+ remoteRelease.getVersionNumber().getValue() + " - " + remoteRelease.getName().getValue()));
+					lookupValues.add(new ArtifactFieldValue(remoteRelease.ReleaseId, indentDisplay
+							+ remoteRelease.VersionNumber + " - " + remoteRelease.Name));
 				}
 			}
 			artifactField.setValues(lookupValues.toArray(new ArtifactFieldValue[0]));
@@ -1001,19 +940,7 @@ public class SpiraImportExport
 		{
 			return null;
 		}
-		catch (WebServiceException ex)
-		{
-			return null;
-		}
-		catch (IImportExportConnectionConnectToProjectServiceFaultMessageFaultFaultMessage exception)
-		{
-			return null;
-		}
-		catch (IImportExportReleaseRetrieveServiceFaultMessageFaultFaultMessage exception)
-		{
-			return null;
-		}
-		catch (IImportExportConnectionAuthenticate2ServiceFaultMessageFaultFaultMessage exception)
+		catch (IOException ex)
 		{
 			return null;
 		}
@@ -1036,50 +963,30 @@ public class SpiraImportExport
 	{
 		try
 		{
-			// Get the list of incident statuses from the SOAP API
-			// First we need to re-authenticate
-			boolean success = soap.connectionAuthenticate2(this.userName, this.password, SPIRA_PLUG_IN_NAME);
-			if (!success)
-			{
-				// throw new SpiraException (this.userName + "/" +
-				// this.password);
-				throw new SpiraAuthenticationException(Messages.SpiraImportExport_UnableToAuthenticate);
-			}
-
-			// Next we need to connect to the appropriate project
-			success = soap.connectionConnectToProject(projectId);
-			if (!success)
-			{
-				// throw new SpiraException (this.userName + "/" +
-				// this.password);
-				throw new SpiraAuthorizationException(NLS.bind(Messages.SpiraImportExport_UnableToConnectToProject, projectId));
-			}
-
 			// Get the list of workflow transitions
-			List<RemoteWorkflowIncidentTransition> remoteTransitions = soap.incidentRetrieveWorkflowTransitions(currentTypeId, currentStatusId, isDetector,
-					isOwner).getRemoteWorkflowIncidentTransition();
-
-			// Convert the SOAP transitions into local versions
+			String url = this.fullUrl + "/projects/{project_id}/incidents/types/{incident_type_id}/workflow/transitions?status_id={incident_status_id}&is_detector={is_detector}&isOwner={is_owner}";
+			url = url.replace("{product_id}", String.valueOf(projectId));
+			url = url.replace("{incident_type_id}", String.valueOf(currentTypeId));
+			url = url.replace("{incident_status_id}", String.valueOf(currentStatusId));
+			url = url.replace("{is_detector}", String.valueOf(isDetector));
+			url = url.replace("{is_owner}", String.valueOf(isOwner));
+			String json = httpGet(url, this.userName, this.apiKey);
+			
+			//Parse the returned data
+			Gson gson = new Gson();
+			ArrayList<RemoteWorkflowTransition> remoteTransitions;
+			java.lang.reflect.Type remoteTransitionsType = new TypeToken<ArrayList<RemoteWorkflowTransition>>(){}.getType();
+			remoteTransitions = gson.fromJson(json, remoteTransitionsType);
+			
+			// Convert the remote transitions into local versions
 			ArrayList<IncidentWorkflowTransition> transitions = new ArrayList<IncidentWorkflowTransition>();
-			for (RemoteWorkflowIncidentTransition remoteTransition : remoteTransitions)
+			for (RemoteWorkflowTransition remoteTransition : remoteTransitions)
 			{
 				transitions.add(new IncidentWorkflowTransition(remoteTransition));
 			}
 			return transitions;
 		}
-		catch (WebServiceException ex)
-		{
-			throw new SpiraException(ex.getMessage());
-		}
-		catch (IImportExportConnectionAuthenticate2ServiceFaultMessageFaultFaultMessage ex)
-		{
-			throw new SpiraException(ex.getMessage());
-		}
-		catch (IImportExportConnectionConnectToProjectServiceFaultMessageFaultFaultMessage ex)
-		{
-			throw new SpiraException(ex.getMessage());
-		}
-		catch (IImportExportIncidentRetrieveWorkflowTransitionsServiceFaultMessageFaultFaultMessage ex)
+		catch (IOException ex)
 		{
 			throw new SpiraException(ex.getMessage());
 		}
@@ -1088,12 +995,12 @@ public class SpiraImportExport
 	public List<IncidentWorkflowField> incidentRetrieveWorkflowFields(int currentIncidentTypeId, int currentIncidentStatusId) throws SpiraException
 	{
 		// Don't return fields if we have no project set
-		if (this.storedProjectId == null)
+		if (this.storedProjectTemplateId == null)
 		{
 			return null;
 		}
-		int projectId = this.storedProjectId.intValue();
-		return this.incidentRetrieveWorkflowFields(projectId, currentIncidentTypeId, currentIncidentStatusId);
+		int projectTemplateId = this.storedProjectTemplateId.intValue();
+		return this.incidentRetrieveWorkflowFields(projectTemplateId, currentIncidentTypeId, currentIncidentStatusId);
 	}
 
 	/**
@@ -1106,117 +1013,90 @@ public class SpiraImportExport
 	 * @return
 	 * @throws SpiraException
 	 */
-	public List<IncidentWorkflowField> incidentRetrieveWorkflowFields(int projectId, int currentIncidentTypeId, int currentIncidentStatusId)
+	public List<IncidentWorkflowField> incidentRetrieveWorkflowFields(int projectTemplateId, int currentIncidentTypeId, int currentIncidentStatusId)
 			throws SpiraException
 	{
 		try
 		{
-			// Get the list of incident statuses from the SOAP API
-			// First we need to re-authenticate
-			boolean success = soap.connectionAuthenticate2(this.userName, this.password, SPIRA_PLUG_IN_NAME);
-			if (!success)
-			{
-				// throw new SpiraException (this.userName + "/" +
-				// this.password);
-				throw new SpiraAuthenticationException(Messages.SpiraImportExport_UnableToAuthenticate);
-			}
-
-			// Next we need to connect to the appropriate project
-			success = soap.connectionConnectToProject(projectId);
-			if (!success)
-			{
-				// throw new SpiraException (this.userName + "/" +
-				// this.password);
-				throw new SpiraAuthorizationException(NLS.bind(Messages.SpiraImportExport_UnableToConnectToProject, projectId));
-			}
-
-			// Get the list of workflow fields (inactive/required/hidden)
-			List<RemoteWorkflowIncidentFields> remoteFields = soap.incidentRetrieveWorkflowFields(currentIncidentTypeId, currentIncidentStatusId)
-					.getRemoteWorkflowIncidentFields();
+			// Get the list of workflow field states
+			// (inactive/required/hidden)
+			String url = this.fullUrl + "/project-templates/{project_template_id}/incidents/types/{incident_type_id}/workflow/fields?status_id={incident_status_id}";
+			url = url.replace("{project_template_id}", String.valueOf(projectTemplateId));
+			url = url.replace("{incident_type_id}", String.valueOf(currentIncidentTypeId));
+			url = url.replace("{incident_status_id}", String.valueOf(currentIncidentStatusId));
+			String json = httpGet(url, this.userName, this.apiKey);
+			
+			//Parse the returned data
+			Gson gson = new Gson();
+			ArrayList<RemoteWorkflowField> remoteWorkflowFields;
+			java.lang.reflect.Type remoteWorkflowFieldsType = new TypeToken<ArrayList<RemoteWorkflowField>>(){}.getType();
+			remoteWorkflowFields = gson.fromJson(json, remoteWorkflowFieldsType);
 
 			// Convert the SOAP workflow fields into local versions
 			ArrayList<IncidentWorkflowField> fields = new ArrayList<IncidentWorkflowField>();
-			for (RemoteWorkflowIncidentFields remoteField : remoteFields)
+			for (RemoteWorkflowField remoteField : remoteWorkflowFields)
 			{
 				fields.add(new IncidentWorkflowField(remoteField));
 			}
 
 			// Get the list of workflow-controlled custom-properties
 			// (inactive/required/hidden)
-			List<RemoteWorkflowIncidentCustomProperties> remoteWorkflowCustomProperties = soap.incidentRetrieveWorkflowCustomProperties(currentIncidentTypeId,
-					currentIncidentStatusId).getRemoteWorkflowIncidentCustomProperties();
-			for (RemoteWorkflowIncidentCustomProperties remoteWorkflowCustomProperty : remoteWorkflowCustomProperties)
+			url = this.fullUrl + "/project-templates/{project_template_id}/incidents/types/{incident_type_id}/workflow/custom-properties?status_id={incident_status_id}";
+			url = url.replace("{project_template_id}", String.valueOf(projectTemplateId));
+			url = url.replace("{incident_type_id}", String.valueOf(currentIncidentTypeId));
+			url = url.replace("{incident_status_id}", String.valueOf(currentIncidentStatusId));
+			json = httpGet(url, this.userName, this.apiKey);
+			
+			//Parse the returned data
+			ArrayList<RemoteWorkflowCustomProperty> remoteWorkflowCustomProperties;
+			java.lang.reflect.Type remoteWorkflowCustomPropertiesType = new TypeToken<ArrayList<RemoteWorkflowCustomProperty>>(){}.getType();
+			remoteWorkflowCustomProperties = gson.fromJson(json, remoteWorkflowCustomPropertiesType);
+
+			for (RemoteWorkflowCustomProperty remoteWorkflowCustomProperty : remoteWorkflowCustomProperties)
 			{
 				fields.add(new IncidentWorkflowField(remoteWorkflowCustomProperty));
 			}
 
 			return fields;
 		}
-		catch (WebServiceException ex)
+		catch (IOException ex)
 		{
 			throw new SpiraException(ex.getMessage());
-		}
-		catch (IImportExportConnectionAuthenticate2ServiceFaultMessageFaultFaultMessage ex)
-		{
-			throw new SpiraException(ex.getMessage());
-		}
-		catch (IImportExportIncidentRetrieveWorkflowFieldsServiceFaultMessageFaultFaultMessage ex)
-		{
-			throw new SpiraException(ex.getMessage());
-		}
-		catch (IImportExportConnectionConnectToProjectServiceFaultMessageFaultFaultMessage ex)
-		{
-			throw new SpiraException(ex.getMessage());
-		}
-		catch (IImportExportIncidentRetrieveWorkflowCustomPropertiesServiceFaultMessageFaultFaultMessage exception)
-		{
-			throw new SpiraException(exception.getMessage());
 		}
 	}
 
 	public ArtifactField incidentGetStatus()
 	{
 		// Don't return releases if we have no project set
-		if (this.storedProjectId == null)
+		if (this.storedProjectTemplateId == null)
 		{
 			return null;
 		}
-		int projectId = this.storedProjectId.intValue();
-		return this.incidentGetStatus(projectId);
+		int projectTemplateId = this.storedProjectTemplateId.intValue();
+		return this.incidentGetStatus(projectTemplateId);
 	}
 
-	public ArtifactField incidentGetStatus(int projectId)
+	public ArtifactField incidentGetStatus(int projectTemplateId)
 	{
 		try
 		{
-			// Get the list of incident statuses from the SOAP API
-			// First we need to re-authenticate
-			boolean success = soap.connectionAuthenticate2(this.userName, this.password, SPIRA_PLUG_IN_NAME);
-			if (!success)
-			{
-				// throw new SpiraException (this.userName + "/" +
-				// this.password);
-				throw new SpiraAuthenticationException(Messages.SpiraImportExport_UnableToAuthenticate);
-			}
-
-			// Next we need to connect to the appropriate project
-			success = soap.connectionConnectToProject(projectId);
-			if (!success)
-			{
-				// throw new SpiraException (this.userName + "/" +
-				// this.password);
-				throw new SpiraAuthorizationException(NLS.bind(Messages.SpiraImportExport_UnableToConnectToProject, projectId));
-			}
-
 			// Get the list of statuses
-			List<RemoteIncidentStatus> remoteStatuses = soap.incidentRetrieveStatuses().getRemoteIncidentStatus();
+			String url = this.fullUrl + "/project-templates/{project_template_id}/incidents/statuses";
+			url = url.replace("{project_template_id}", String.valueOf(projectTemplateId));
+			String json = httpGet(url, this.userName, this.apiKey);
+			
+			//Parse the returned data
+			Gson gson = new Gson();
+			ArrayList<RemoteIncidentStatus> remoteStatuses;
+			java.lang.reflect.Type remoteStatusesType = new TypeToken<ArrayList<RemoteIncidentStatus>>(){}.getType();
+			remoteStatuses = gson.fromJson(json, remoteStatusesType);
 
-			// Convert the SOAP release into the ArtifactField class
+			// Convert the remote release into the ArtifactField class
 			ArtifactField artifactField = new ArtifactField("IncidentStatus");
 			ArrayList<ArtifactFieldValue> lookupValues = new ArrayList<ArtifactFieldValue>();
 			for (RemoteIncidentStatus remoteStatus : remoteStatuses)
 			{
-				lookupValues.add(new ArtifactFieldValue(remoteStatus.getIncidentStatusId().getValue(), remoteStatus.getName().getValue()));
+				lookupValues.add(new ArtifactFieldValue(remoteStatus.IncidentStatusId, remoteStatus.Name));
 			}
 			artifactField.setValues(lookupValues.toArray(new ArtifactFieldValue[0]));
 			return artifactField;
@@ -1225,19 +1105,7 @@ public class SpiraImportExport
 		{
 			return null;
 		}
-		catch (WebServiceException ex)
-		{
-			return null;
-		}
-		catch (IImportExportIncidentRetrieveStatusesServiceFaultMessageFaultFaultMessage exception)
-		{
-			return null;
-		}
-		catch (IImportExportConnectionConnectToProjectServiceFaultMessageFaultFaultMessage exception)
-		{
-			return null;
-		}
-		catch (IImportExportConnectionAuthenticate2ServiceFaultMessageFaultFaultMessage exception)
+		catch (IOException ex)
 		{
 			return null;
 		}
@@ -1246,46 +1114,35 @@ public class SpiraImportExport
 	public ArtifactField incidentGetType()
 	{
 		// Don't return releases if we have no project set
-		if (this.storedProjectId == null)
+		if (this.storedProjectTemplateId == null)
 		{
 			return null;
 		}
-		int projectId = this.storedProjectId.intValue();
-		return this.incidentGetType(projectId);
+		int projectTemplateId = this.storedProjectTemplateId.intValue();
+		return this.incidentGetType(projectTemplateId);
 	}
 
-	public ArtifactField incidentGetType(int projectId)
+	public ArtifactField incidentGetType(int projectTemplateId)
 	{
 		try
 		{
-			// Get the list of incident types from the SOAP API
-			// First we need to re-authenticate
-			boolean success = soap.connectionAuthenticate2(this.userName, this.password, SPIRA_PLUG_IN_NAME);
-			if (!success)
-			{
-				// throw new SpiraException (this.userName + "/" +
-				// this.password);
-				throw new SpiraAuthenticationException(Messages.SpiraImportExport_UnableToAuthenticate);
-			}
-
-			// Next we need to connect to the appropriate project
-			success = soap.connectionConnectToProject(projectId);
-			if (!success)
-			{
-				// throw new SpiraException (this.userName + "/" +
-				// this.password);
-				throw new SpiraAuthorizationException(NLS.bind(Messages.SpiraImportExport_UnableToConnectToProject, projectId));
-			}
-
 			// Get the list of types
-			List<RemoteIncidentType> remoteTypes = soap.incidentRetrieveTypes().getRemoteIncidentType();
+			String url = this.fullUrl + "/project-templates/{project_template_id}/incidents/types";
+			url = url.replace("{project_template_id}", String.valueOf(projectTemplateId));
+			String json = httpGet(url, this.userName, this.apiKey);
+			
+			//Parse the returned data
+			Gson gson = new Gson();
+			ArrayList<RemoteIncidentType> remoteTypes;
+			java.lang.reflect.Type remoteTypesType = new TypeToken<ArrayList<RemoteIncidentType>>(){}.getType();
+			remoteTypes = gson.fromJson(json, remoteTypesType);
 
 			// Convert the SOAP release into the ArtifactField class
 			ArtifactField artifactField = new ArtifactField("IncidentType");
 			ArrayList<ArtifactFieldValue> lookupValues = new ArrayList<ArtifactFieldValue>();
 			for (RemoteIncidentType remoteType : remoteTypes)
 			{
-				lookupValues.add(new ArtifactFieldValue(remoteType.getIncidentTypeId().getValue(), remoteType.getName().getValue()));
+				lookupValues.add(new ArtifactFieldValue(remoteType.IncidentTypeId, remoteType.Name));
 			}
 			artifactField.setValues(lookupValues.toArray(new ArtifactFieldValue[0]));
 			return artifactField;
@@ -1294,19 +1151,7 @@ public class SpiraImportExport
 		{
 			return null;
 		}
-		catch (WebServiceException ex)
-		{
-			return null;
-		}
-		catch (IImportExportConnectionConnectToProjectServiceFaultMessageFaultFaultMessage exception)
-		{
-			return null;
-		}
-		catch (IImportExportIncidentRetrieveTypesServiceFaultMessageFaultFaultMessage exception)
-		{
-			return null;
-		}
-		catch (IImportExportConnectionAuthenticate2ServiceFaultMessageFaultFaultMessage exception)
+		catch (IOException ex)
 		{
 			return null;
 		}
@@ -1315,46 +1160,35 @@ public class SpiraImportExport
 	public ArtifactField incidentGetPriority()
 	{
 		// Don't return releases if we have no project set
-		if (this.storedProjectId == null)
+		if (this.storedProjectTemplateId == null)
 		{
 			return null;
 		}
-		int projectId = this.storedProjectId.intValue();
-		return this.incidentGetPriority(projectId);
+		int projectTemplateId = this.storedProjectTemplateId.intValue();
+		return this.incidentGetPriority(projectTemplateId);
 	}
 
-	public ArtifactField incidentGetPriority(int projectId)
+	public ArtifactField incidentGetPriority(int projectTemplateId)
 	{
 		try
 		{
-			// Get the list of incident priorities from the SOAP API
-			// First we need to re-authenticate
-			boolean success = soap.connectionAuthenticate2(this.userName, this.password, SPIRA_PLUG_IN_NAME);
-			if (!success)
-			{
-				// throw new SpiraException (this.userName + "/" +
-				// this.password);
-				throw new SpiraAuthenticationException(Messages.SpiraImportExport_UnableToAuthenticate);
-			}
-
-			// Next we need to connect to the appropriate project
-			success = soap.connectionConnectToProject(projectId);
-			if (!success)
-			{
-				// throw new SpiraException (this.userName + "/" +
-				// this.password);
-				throw new SpiraAuthorizationException(NLS.bind(Messages.SpiraImportExport_UnableToConnectToProject, projectId));
-			}
-
 			// Get the list of priorities
-			List<RemoteIncidentPriority> remotePriorities = soap.incidentRetrievePriorities().getRemoteIncidentPriority();
+			String url = this.fullUrl + "/project-templates/{project_template_id}/incidents/priorities";
+			url = url.replace("{project_template_id}", String.valueOf(projectTemplateId));
+			String json = httpGet(url, this.userName, this.apiKey);
+			
+			//Parse the returned data
+			Gson gson = new Gson();
+			ArrayList<RemoteIncidentPriority> remotePriorities;
+			java.lang.reflect.Type remoteTypesType = new TypeToken<ArrayList<RemoteIncidentPriority>>(){}.getType();
+			remotePriorities = gson.fromJson(json, remoteTypesType);
 
 			// Convert the SOAP release into the ArtifactField class
 			ArtifactField artifactField = new ArtifactField("IncidentPriority");
 			ArrayList<ArtifactFieldValue> lookupValues = new ArrayList<ArtifactFieldValue>();
 			for (RemoteIncidentPriority remotePriority : remotePriorities)
 			{
-				lookupValues.add(new ArtifactFieldValue(remotePriority.getPriorityId().getValue(), remotePriority.getName().getValue()));
+				lookupValues.add(new ArtifactFieldValue(remotePriority.PriorityId, remotePriority.Name));
 			}
 			artifactField.setValues(lookupValues.toArray(new ArtifactFieldValue[0]));
 			return artifactField;
@@ -1363,19 +1197,7 @@ public class SpiraImportExport
 		{
 			return null;
 		}
-		catch (WebServiceException ex)
-		{
-			return null;
-		}
-		catch (IImportExportConnectionConnectToProjectServiceFaultMessageFaultFaultMessage exception)
-		{
-			return null;
-		}
-		catch (IImportExportIncidentRetrievePrioritiesServiceFaultMessageFaultFaultMessage exception)
-		{
-			return null;
-		}
-		catch (IImportExportConnectionAuthenticate2ServiceFaultMessageFaultFaultMessage exception)
+		catch (IOException ex)
 		{
 			return null;
 		}
@@ -1384,12 +1206,12 @@ public class SpiraImportExport
 	public ArtifactField incidentGetSeverity()
 	{
 		// Don't return releases if we have no project set
-		if (this.storedProjectId == null)
+		if (this.storedProjectTemplateId == null)
 		{
 			return null;
 		}
-		int projectId = this.storedProjectId.intValue();
-		return this.incidentGetSeverity(projectId);
+		int projectTemplateId = this.storedProjectTemplateId.intValue();
+		return this.incidentGetSeverity(projectTemplateId);
 	}
 
 	/**
@@ -1402,32 +1224,14 @@ public class SpiraImportExport
 	 * @param projectId
 	 *            Project id (optional, uses stored ID if set to null)
 	 */
-	public ArtifactField[] getCustomProperties(ArtifactType artifactType, Integer projectId)
+	public ArtifactField[] getCustomProperties(ArtifactType artifactType, Integer projectTemplateId)
 	{
 		try
 		{
 			// Get the stored project id if not set
-			if (projectId == null)
+			if (projectTemplateId == null)
 			{
-				projectId = this.getStoredProjectId();
-			}
-
-			// First we need to re-authenticate
-			boolean success = soap.connectionAuthenticate2(this.userName, this.password, SPIRA_PLUG_IN_NAME);
-			if (!success)
-			{
-				// throw new SpiraException (this.userName + "/" +
-				// this.password);
-				throw new SpiraAuthenticationException(Messages.SpiraImportExport_UnableToAuthenticate);
-			}
-
-			// Next we need to connect to the appropriate project
-			success = soap.connectionConnectToProject(projectId);
-			if (!success)
-			{
-				// throw new SpiraException (this.userName + "/" +
-				// this.password);
-				throw new SpiraAuthorizationException(NLS.bind(Messages.SpiraImportExport_UnableToConnectToProject, projectId));
+				projectTemplateId = this.getStoredProjectTemplateId();
 			}
 
 			// Get the list of custom property definitions
@@ -1438,16 +1242,15 @@ public class SpiraImportExport
 			ArrayList<ArtifactField> artifactFields = new ArrayList<ArtifactField>();
 			for (RemoteCustomProperty remoteCustomProperty : remoteCustomProperties)
 			{
-				ArtifactField artifactField = new ArtifactField(remoteCustomProperty.getCustomPropertyFieldName().getValue());
-				artifactField.setLabel(remoteCustomProperty.getName().getValue());
+				ArtifactField artifactField = new ArtifactField(remoteCustomProperty.CustomPropertyFieldName);
+				artifactField.setLabel(remoteCustomProperty.Name);
 				artifactField.setCustom(true);
 
 				// Get the list of options
 				List<RemoteCustomPropertyOption> remoteCustomPropertyOptions = null;
-				if (remoteCustomProperty.getOptions() != null && remoteCustomProperty.getOptions().getValue() != null
-						&& !remoteCustomProperty.getOptions().getValue().getRemoteCustomPropertyOption().isEmpty())
+				if (remoteCustomProperty.Options != null && !remoteCustomProperty.Options.isEmpty())
 				{
-					remoteCustomPropertyOptions = remoteCustomProperty.getOptions().getValue().getRemoteCustomPropertyOption();
+					remoteCustomPropertyOptions = remoteCustomProperty.Options;
 				}
 
 				// Check to see if we have the allow-empty or default value
@@ -1459,24 +1262,24 @@ public class SpiraImportExport
 					for (RemoteCustomPropertyOption remoteCustomPropertyOption : remoteCustomPropertyOptions)
 					{
 						// Check for allow-empty option
-						if (remoteCustomPropertyOption.getCustomPropertyOptionId().intValue() == SpiraTeamCorePlugin.CustomPropertyOption_AllowEmpty
-								&& remoteCustomPropertyOption.getValue() != null)
+						if (remoteCustomPropertyOption.CustomPropertyOptionId == SpiraTeamCorePlugin.CustomPropertyOption_AllowEmpty
+								&& remoteCustomPropertyOption.Value != null)
 						{
-							allowEmpty = (remoteCustomPropertyOption.getValue().getValue().equals("Y"));
+							allowEmpty = (remoteCustomPropertyOption.Value.equals("Y"));
 						}
 
 						// Check for default-value option
-						if (remoteCustomPropertyOption.getCustomPropertyOptionId().intValue() == SpiraTeamCorePlugin.CustomPropertyOption_Default
-								&& remoteCustomPropertyOption.getValue() != null)
+						if (remoteCustomPropertyOption.CustomPropertyOptionId == SpiraTeamCorePlugin.CustomPropertyOption_Default
+								&& remoteCustomPropertyOption.Value != null)
 						{
-							defaultValue = remoteCustomPropertyOption.getValue().getValue();
+							defaultValue = remoteCustomPropertyOption.Value;
 						}
 					}
 				}
 				artifactField.setOptional(allowEmpty);
 				artifactField.setDefaultValue(defaultValue);
 
-				if (remoteCustomProperty.getCustomPropertyTypeId().intValue() == SpiraTeamCorePlugin.CustomPropertyType_Text)
+				if (remoteCustomProperty.CustomPropertyTypeId == SpiraTeamCorePlugin.CustomPropertyType_Text)
 				{
 					// See if we have a rich-text or plain text custom property
 					boolean isRichText = false;
@@ -1484,24 +1287,24 @@ public class SpiraImportExport
 					{
 						for (RemoteCustomPropertyOption remoteCustomPropertyOption : remoteCustomPropertyOptions)
 						{
-							if (remoteCustomPropertyOption.getCustomPropertyOptionId().intValue() == SpiraTeamCorePlugin.CustomPropertyOption_RichText
-									&& remoteCustomPropertyOption.getValue() != null)
+							if (remoteCustomPropertyOption.CustomPropertyOptionId == SpiraTeamCorePlugin.CustomPropertyOption_RichText
+									&& remoteCustomPropertyOption.Value != null)
 							{
-								isRichText = (remoteCustomPropertyOption.getValue().getValue().equals("Y"));
+								isRichText = (remoteCustomPropertyOption.Value.equals("Y"));
 							}
 						}
 					}
 					artifactField.setType((isRichText) ? Type.RICH_TEXT : Type.TEXT);
 				}
-				if (remoteCustomProperty.getCustomPropertyTypeId().intValue() == SpiraTeamCorePlugin.CustomPropertyType_Integer)
+				if (remoteCustomProperty.CustomPropertyTypeId == SpiraTeamCorePlugin.CustomPropertyType_Integer)
 				{
 					artifactField.setType(Type.INTEGER);
 				}
-				if (remoteCustomProperty.getCustomPropertyTypeId().intValue() == SpiraTeamCorePlugin.CustomPropertyType_Boolean)
+				if (remoteCustomProperty.CustomPropertyTypeId == SpiraTeamCorePlugin.CustomPropertyType_Boolean)
 				{
 					artifactField.setType(Type.CHECKBOX);
 				}
-				if (remoteCustomProperty.getCustomPropertyTypeId().intValue() == SpiraTeamCorePlugin.CustomPropertyType_Decimal)
+				if (remoteCustomProperty.CustomPropertyTypeId == SpiraTeamCorePlugin.CustomPropertyType_Decimal)
 				{
 					artifactField.setType(Type.DOUBLE);
 
@@ -1511,14 +1314,14 @@ public class SpiraImportExport
 					{
 						for (RemoteCustomPropertyOption remoteCustomPropertyOption : remoteCustomPropertyOptions)
 						{
-							if (remoteCustomPropertyOption.getCustomPropertyOptionId().intValue() == SpiraTeamCorePlugin.CustomPropertyOption_Precision
-									&& remoteCustomPropertyOption.getValue() != null)
+							if (remoteCustomPropertyOption.CustomPropertyOptionId == SpiraTeamCorePlugin.CustomPropertyOption_Precision
+									&& remoteCustomPropertyOption.Value != null)
 							{
-								String rawValue = remoteCustomPropertyOption.getValue().getValue();
+								String rawValue = remoteCustomPropertyOption.Value;
 								try
 								{
 									int intValue = Integer.parseInt(rawValue);
-									precision = new Integer(intValue);
+									precision = Integer.valueOf(intValue);
 								}
 								catch (NumberFormatException ex)
 								{
@@ -1531,11 +1334,11 @@ public class SpiraImportExport
 
 					artifactField.setPrecision(precision);
 				}
-				if (remoteCustomProperty.getCustomPropertyTypeId().intValue() == SpiraTeamCorePlugin.CustomPropertyType_Date)
+				if (remoteCustomProperty.CustomPropertyTypeId == SpiraTeamCorePlugin.CustomPropertyType_Date)
 				{
 					artifactField.setType(Type.DATE);
 				}
-				if (remoteCustomProperty.getCustomPropertyTypeId().intValue() == SpiraTeamCorePlugin.CustomPropertyType_User)
+				if (remoteCustomProperty.CustomPropertyTypeId == SpiraTeamCorePlugin.CustomPropertyType_User)
 				{
 					artifactField.setType(Type.PERSON);
 
@@ -1584,27 +1387,15 @@ public class SpiraImportExport
 					{
 						// Leave the list unpopulated
 					}
-					catch (WebServiceException ex)
-					{
-						// Leave the list unpopulated
-					}
-					catch (IImportExportConnectionConnectToProjectServiceFaultMessageFaultFaultMessage exception)
-					{
-						// Leave the list unpopulated
-					}
-					catch (IImportExportProjectRetrieveUserMembershipServiceFaultMessageFaultFaultMessage exception)
-					{
-						// Leave the list unpopulated
-					}
-					catch (IImportExportConnectionAuthenticate2ServiceFaultMessageFaultFaultMessage exception)
+					catch (IOException ex)
 					{
 						// Leave the list unpopulated
 					}
 				}
-				if (remoteCustomProperty.getCustomPropertyTypeId().intValue() == SpiraTeamCorePlugin.CustomPropertyType_List
-						|| remoteCustomProperty.getCustomPropertyTypeId().intValue() == SpiraTeamCorePlugin.CustomPropertyType_MultiList)
+				if (remoteCustomProperty.CustomPropertyTypeId == SpiraTeamCorePlugin.CustomPropertyType_List
+						|| remoteCustomProperty.CustomPropertyTypeId == SpiraTeamCorePlugin.CustomPropertyType_MultiList)
 				{
-					if (remoteCustomProperty.getCustomPropertyTypeId().intValue() == SpiraTeamCorePlugin.CustomPropertyType_List)
+					if (remoteCustomProperty.CustomPropertyTypeId == SpiraTeamCorePlugin.CustomPropertyType_List)
 					{
 						artifactField.setType(Type.SINGLE_SELECT);
 					}
@@ -1614,20 +1405,19 @@ public class SpiraImportExport
 					}
 
 					// Now we need to get the custom list values
-					RemoteCustomList remoteCustomList = remoteCustomProperty.getCustomList().getValue();
+					RemoteCustomList remoteCustomList = remoteCustomProperty.CustomList;
 					if (remoteCustomList != null)
 					{
-						if (remoteCustomList.getValues().getValue() != null)
+						if (remoteCustomList.Values != null)
 						{
-							List<RemoteCustomListValue> remoteCustomListValues = remoteCustomList.getValues().getValue().getRemoteCustomListValue();
+							List<RemoteCustomListValue> remoteCustomListValues = remoteCustomList.Values;
 							if (remoteCustomListValues != null)
 							{
 								ArtifactFieldValue[] values = new ArtifactFieldValue[remoteCustomListValues.size()];
 								int i = 0;
 								for (RemoteCustomListValue remoteCustomListValue : remoteCustomListValues)
 								{
-									values[i] = new ArtifactFieldValue(remoteCustomListValue.getCustomPropertyValueId().getValue(), remoteCustomListValue
-											.getName().getValue());
+									values[i] = new ArtifactFieldValue(remoteCustomListValue.CustomPropertyValueId, remoteCustomListValue.Name);
 									i++;
 								}
 								artifactField.setValues(values);
@@ -1643,56 +1433,33 @@ public class SpiraImportExport
 		{
 			return null;
 		}
-		catch (WebServiceException ex)
-		{
-			return null;
-		}
-		catch (IImportExportCustomPropertyRetrieveForArtifactTypeServiceFaultMessageFaultFaultMessage exception)
-		{
-			return null;
-		}
-		catch (IImportExportConnectionConnectToProjectServiceFaultMessageFaultFaultMessage exception)
-		{
-			return null;
-		}
-		catch (IImportExportConnectionAuthenticate2ServiceFaultMessageFaultFaultMessage exception)
+		catch (IOException ex)
 		{
 			return null;
 		}
 	}
 
-	public ArtifactField incidentGetSeverity(int projectId)
+	public ArtifactField incidentGetSeverity(int projectTemplateId)
 	{
 		try
 		{
-			// Get the list of incident severities from the SOAP API
-			// First we need to re-authenticate
-			boolean success = soap.connectionAuthenticate2(this.userName, this.password, SPIRA_PLUG_IN_NAME);
-			if (!success)
-			{
-				// throw new SpiraException (this.userName + "/" +
-				// this.password);
-				throw new SpiraAuthenticationException(Messages.SpiraImportExport_UnableToAuthenticate);
-			}
-
-			// Next we need to connect to the appropriate project
-			success = soap.connectionConnectToProject(projectId);
-			if (!success)
-			{
-				// throw new SpiraException (this.userName + "/" +
-				// this.password);
-				throw new SpiraAuthorizationException(NLS.bind(Messages.SpiraImportExport_UnableToConnectToProject, projectId));
-			}
-
 			// Get the list of severities
-			List<RemoteIncidentSeverity> remoteSeverities = soap.incidentRetrieveSeverities().getRemoteIncidentSeverity();
+			String url = this.fullUrl + "/project-templates/{project_template_id}/incidents/severities";
+			url = url.replace("{project_template_id}", String.valueOf(projectTemplateId));
+			String json = httpGet(url, this.userName, this.apiKey);
+			
+			//Parse the returned data
+			Gson gson = new Gson();
+			ArrayList<RemoteIncidentSeverity> remoteSeverities;
+			java.lang.reflect.Type remoteSeveritiesType = new TypeToken<ArrayList<RemoteIncidentSeverity>>(){}.getType();
+			remoteSeverities = gson.fromJson(json, remoteSeveritiesType);
 
 			// Convert the SOAP release into the ArtifactField class
 			ArtifactField artifactField = new ArtifactField("IncidentSeverity");
 			ArrayList<ArtifactFieldValue> lookupValues = new ArrayList<ArtifactFieldValue>();
 			for (RemoteIncidentSeverity remoteSeverity : remoteSeverities)
 			{
-				lookupValues.add(new ArtifactFieldValue(remoteSeverity.getSeverityId().getValue(), remoteSeverity.getName().getValue()));
+				lookupValues.add(new ArtifactFieldValue(remoteSeverity.SeverityId, remoteSeverity.Name));
 			}
 			artifactField.setValues(lookupValues.toArray(new ArtifactFieldValue[0]));
 			return artifactField;
@@ -1701,19 +1468,7 @@ public class SpiraImportExport
 		{
 			return null;
 		}
-		catch (WebServiceException ex)
-		{
-			return null;
-		}
-		catch (IImportExportConnectionAuthenticate2ServiceFaultMessageFaultFaultMessage exception)
-		{
-			return null;
-		}
-		catch (IImportExportIncidentRetrieveSeveritiesServiceFaultMessageFaultFaultMessage exception)
-		{
-			return null;
-		}
-		catch (IImportExportConnectionConnectToProjectServiceFaultMessageFaultFaultMessage exception)
+		catch (IOException ex)
 		{
 			return null;
 		}
@@ -1802,19 +1557,17 @@ public class SpiraImportExport
 	{
 		try
 		{
-			// First we need to re-authenticate
-			boolean success = soap.connectionAuthenticate2(this.userName, this.password, SPIRA_PLUG_IN_NAME);
-			if (!success)
-			{
-				// throw new SpiraException (this.userName + "/" +
-				// this.password);
-				throw new SpiraAuthenticationException(Messages.SpiraImportExport_UnableToAuthenticate);
-			}
-
 			// Call the appropriate method
-			List<RemoteIncident> remoteIncidents = soap.incidentRetrieveForOwner().getRemoteIncident();
+			String url = this.fullUrl + "/incidents";
+			String json = httpGet(url, this.userName, this.apiKey);
+			
+			//Parse the returned data
+			Gson gson = new Gson();
+			ArrayList<RemoteIncident> remoteIncidents;
+			java.lang.reflect.Type remoteIncidentsType = new TypeToken<ArrayList<RemoteIncident>>(){}.getType();
+			remoteIncidents = gson.fromJson(json, remoteIncidentsType);
 
-			// Convert the SOAP incidents into the local versions
+			// Convert the remote incidents into the local versions
 			List<Incident> incidents = new ArrayList<Incident>();
 			for (RemoteIncident remoteIncident : remoteIncidents)
 			{
@@ -1836,15 +1589,7 @@ public class SpiraImportExport
 			}
 			return incidents;
 		}
-		catch (WebServiceException ex)
-		{
-			throw new SpiraException(ex.getMessage());
-		}
-		catch (IImportExportConnectionAuthenticate2ServiceFaultMessageFaultFaultMessage ex)
-		{
-			throw new SpiraException(ex.getMessage());
-		}
-		catch (IImportExportIncidentRetrieveForOwnerServiceFaultMessageFaultFaultMessage ex)
+		catch (IOException ex)
 		{
 			throw new SpiraException(ex.getMessage());
 		}
@@ -1860,6 +1605,7 @@ public class SpiraImportExport
 	 */
 	public void taskUpdate(Task task, String newComment) throws SpiraException
 	{
+		/*TODO: Implement
 		try
 		{
 			// First we need to re-authenticate
@@ -1927,7 +1673,7 @@ public class SpiraImportExport
 			// TODO May need to add more intelligent handling of validation
 			// messages
 			throw SpiraTeamUtil.convertFaultException(exception);
-		}
+		}*/
 	}
 
 	/**
@@ -1941,6 +1687,7 @@ public class SpiraImportExport
 	 */
 	public void requirementUpdate(Requirement requirement, String newComment) throws SpiraException
 	{
+		/*TODO: Implement
 		try
 		{
 			// First we need to re-authenticate
@@ -2008,7 +1755,7 @@ public class SpiraImportExport
 			// TODO May need to add more intelligent handling of validation
 			// messages
 			throw SpiraTeamUtil.convertFaultException(exception);
-		}
+		}*/
 	}
 
 	/**
@@ -2021,6 +1768,7 @@ public class SpiraImportExport
 	 */
 	public void incidentUpdate(Incident incident, String newComment) throws SpiraException
 	{
+		/*TODO: Implement
 		try
 		{
 			// First we need to re-authenticate
@@ -2089,7 +1837,7 @@ public class SpiraImportExport
 		catch (IImportExportIncidentAddCommentsServiceFaultMessageFaultFaultMessage exception)
 		{
 			throw SpiraTeamUtil.convertFaultException(exception);
-		}
+		}*/
 	}
 
 	/**
@@ -2130,32 +1878,29 @@ public class SpiraImportExport
 				throw new SpiraInvalidArtifactKeyException(NLS.bind(Messages.SpiraImportExport_InvalidArtifactKey, artifactKey));
 			}
 
-			// Next we need to re-authenticate
-			boolean success = soap.connectionAuthenticate2(this.userName, this.password, SPIRA_PLUG_IN_NAME);
-			if (!success)
-			{
-				// throw new SpiraException (this.userName + "/" +
-				// this.password);
-				throw new SpiraAuthenticationException(Messages.SpiraImportExport_UnableToAuthenticate);
-			}
-
-			// Next we need to connect to the appropriate project
-			success = soap.connectionConnectToProject(projectId);
-			if (!success)
-			{
-				// throw new SpiraException (this.userName + "/" +
-				// this.password);
-				throw new SpiraAuthorizationException(NLS.bind(Messages.SpiraImportExport_UnableToConnectToProject, projectId));
-			}
-
 			// Call the appropriate method
-			RemoteTask remoteTask = soap.taskRetrieveById(taskId);
+			String url = this.fullUrl + "/projects/{project_id}/tasks/{task_id}";
+			url = url.replace("{product_id}", String.valueOf(projectId));
+			url = url.replace("{task_id}", String.valueOf(taskId));
+			String json = httpGet(url, this.userName, this.apiKey);
+
+			//Parse the returned data
+			Gson gson = new Gson();
+			RemoteTask remoteTask = gson.fromJson(json, RemoteTask.class);
 
 			// Convert the SOAP task into the local version
 			Task task = new Task(remoteTask);
 
 			// Now get any associated comments
-			List<RemoteComment> remoteComments = soap.taskRetrieveComments(taskId).getRemoteComment();
+			url = this.fullUrl + "/projects/{project_id}/tasks/{task_id}/comments";
+			url = url.replace("{product_id}", String.valueOf(projectId));
+			url = url.replace("{task_id}", String.valueOf(taskId));
+			json = httpGet(url, this.userName, this.apiKey);
+
+			//Parse the returned data
+			ArrayList<RemoteComment> remoteComments;
+			java.lang.reflect.Type remoteCommentArrayList = new TypeToken<ArrayList<RemoteComment>>(){}.getType();
+			remoteComments = gson.fromJson(json, remoteCommentArrayList);
 
 			// Convert the SOAP resolutions into the local version
 			for (RemoteComment remoteComment : remoteComments)
@@ -2165,11 +1910,16 @@ public class SpiraImportExport
 			}
 
 			// Now get any associated attachments
-			RemoteSort remoteSort = new RemoteSort();
-			remoteSort.setPropertyName(CreateJAXBString("PropertyName", "UploadDate"));
-			remoteSort.setSortAscending(false);
-			List<RemoteDocument> remoteDocuments = soap.documentRetrieveForArtifact(ArtifactType.TASK.getArtifactTypeId(), taskId, null, remoteSort)
-					.getRemoteDocument();
+			url = this.fullUrl + "/projects/{project_id}/artifact-types/{artifact_type_id}/artifacts/{artifact_id}/documents";
+			url = url.replace("{product_id}", String.valueOf(projectId));
+			url = url.replace("{artifact_type_id}", String.valueOf(ArtifactType.TASK.getArtifactTypeId()));
+			url = url.replace("{artifact_id}", String.valueOf(taskId));
+			json = httpGet(url, this.userName, this.apiKey);
+
+			//Parse the returned data
+			ArrayList<RemoteDocument> remoteDocuments;
+			java.lang.reflect.Type remoteDocumentArrayList = new TypeToken<ArrayList<RemoteDocument>>(){}.getType();
+			remoteDocuments = gson.fromJson(json, remoteDocumentArrayList);
 
 			// Convert the SOAP attachments into the local version
 			for (RemoteDocument remoteDocument : remoteDocuments)
@@ -2180,31 +1930,7 @@ public class SpiraImportExport
 
 			return task;
 		}
-		catch (SOAPFaultException ex)
-		{
-			throw SpiraTeamUtil.convertSoapFaults(ex);
-		}
-		catch (WebServiceException ex)
-		{
-			throw new SpiraException(ex.getMessage());
-		}
-		catch (IImportExportConnectionAuthenticate2ServiceFaultMessageFaultFaultMessage ex)
-		{
-			throw new SpiraException(ex.getMessage());
-		}
-		catch (IImportExportConnectionConnectToProjectServiceFaultMessageFaultFaultMessage ex)
-		{
-			throw new SpiraException(ex.getMessage());
-		}
-		catch (IImportExportTaskRetrieveByIdServiceFaultMessageFaultFaultMessage ex)
-		{
-			throw new SpiraException(ex.getMessage());
-		}
-		catch (IImportExportTaskRetrieveCommentsServiceFaultMessageFaultFaultMessage ex)
-		{
-			throw new SpiraException(ex.getMessage());
-		}
-		catch (IImportExportDocumentRetrieveForArtifactServiceFaultMessageFaultFaultMessage ex)
+		catch (IOException ex)
 		{
 			throw new SpiraException(ex.getMessage());
 		}
@@ -2220,18 +1946,17 @@ public class SpiraImportExport
 	{
 		try
 		{
-			// First we need to re-authenticate
-			boolean success = soap.connectionAuthenticate2(this.userName, this.password, SPIRA_PLUG_IN_NAME);
-			if (!success)
-			{
-				// throw new SpiraException (this.userName + "/" +
-				// this.password);
-				throw new SpiraAuthenticationException(Messages.SpiraImportExport_UnableToAuthenticate);
-			}
-
 			// Call the appropriate method
-			List<RemoteTask> remoteTasks = soap.taskRetrieveForOwner().getRemoteTask();
+			String url = this.fullUrl + "/tasks";
+			String json = httpGet(url, this.userName, this.apiKey);
+			
+			//Parse the returned data
+			Gson gson = new Gson();
+			ArrayList<RemoteTask> remoteTasks;
+			java.lang.reflect.Type remoteTasksType = new TypeToken<ArrayList<RemoteTask>>(){}.getType();
+			remoteTasks = gson.fromJson(json, remoteTasksType);
 
+			
 			// Convert the SOAP tasks into the local versions
 			List<Task> tasks = new ArrayList<Task>();
 			for (RemoteTask remoteTask : remoteTasks)
@@ -2254,17 +1979,9 @@ public class SpiraImportExport
 			}
 			return tasks;
 		}
-		catch (WebServiceException ex)
+		catch (IOException ex)
 		{
 			throw new SpiraException(ex.getMessage());
-		}
-		catch (IImportExportTaskRetrieveForOwnerServiceFaultMessageFaultFaultMessage exception)
-		{
-			throw new SpiraException(exception.getMessage());
-		}
-		catch (IImportExportConnectionAuthenticate2ServiceFaultMessageFaultFaultMessage exception)
-		{
-			throw new SpiraException(exception.getMessage());
 		}
 	}
 }
